Metadata/objects/MRR__c.object
<CustomObject>
    <description>This holds the MRR values of the company.</description>
    <fields>
        <fullName>Currency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Currency</label>
        <referenceTo>Currency__c</referenceTo>
        <relationshipLabel>MRRs</relationshipLabel>
        <relationshipName>MRRs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MRR_With_Tax_Currency__c</fullName>
        <label>MRR With Tax (Currency)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MRR_With_Tax__c</fullName>
        <label>MRR With Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MRR_Without_Tax_Currency__c</fullName>
        <label>MRR Without Tax (Currency)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MRR_Without_Tax__c</fullName>
        <label>MRR Without Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>MRR</label>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>MRR_Without_Tax_Currency__c</columns>
        <columns>MRR_With_Tax__c</columns>
        <columns>MRR_Without_Tax__c</columns>
        <columns>MRR_With_Tax_Currency__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>MRR Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MRRs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>